base/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frigate
  name: frigate
  namespace: frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      containers:
      - name: frigate
        image: ghcr.io/blakeblackshear/frigate:stable
        ports:
        - containerPort: 5000
          protocol: TCP
        - containerPort: 8445
          protocol: TCP
        - containerPort: 8555
          protocol: TCP
        - containerPort: 8555
          protocol: UDP
        volumeMounts:
        - mountPath: /config/config.yml
          name: config
        # - mountPath: /dev/shm
        #   name: dshm
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: frigate-pvc
      # - name: dshm
      #   emptyDir:
      #     medium: Memory
      #     #sizeLimit: 64Mi
