base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate-svc
  namespace: frigate
spec:
  type: ClusterIP
  selector:
    app: frigate
  ports:
  - port: 5000
    name: frigate-ui
    protocol: TCP
