base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt"
  name: frigate
  namespace: frigate
spec:
  rules:
  - host: frigate.digitalinfo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frigate-svc
            port: 
              number: 5000
